--- a/.github/workflows/deploy-expiration.yml
+++ b/.github/workflows/deploy-expiration.yml
@@ -1,11 +1,11 @@
-name: deploy-auth
+name: deploy-expiration
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'auth/**'
+      - 'expiration/**'
 
 jobs:
   build:
@@ -16,10 +16,10 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd auth && docker build -t cygnetops/auth .
-      - run: docker push cygnetops/auth
+      - run: cd expiration && docker build -t cygnetops/expiration .
+      - run: docker push cygnetops/expiration
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl rollout restart deployment auth-depl
+      - run: kubectl rollout restart deployment expiration-depl
