fix docker images name

--- a/.github/workflows/deploy-tickets.yml
+++ b/.github/workflows/deploy-tickets.yml
@@ -17,7 +17,7 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: cd tickets && docker build -t cygnetops/tickets .
-      - run: docker push cygnetops/tickets
+      - run: docker push linkaiq2019/tickets
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
