--- a/.github/workflows/deploy-expiration.yml
+++ b/.github/workflows/deploy-expiration.yml
@@ -17,7 +17,7 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: cd expiration && docker build -t cygnetops/expiration .
-      - run: docker push cygnetops/expiration
+      - run: docker push linkaiq2019/expiration
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
