--- a/.github/workflows/deploy-orders.yml
+++ b/.github/workflows/deploy-orders.yml
@@ -17,7 +17,7 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: cd orders && docker build -t cygnetops/orders .
-      - run: docker push cygnetops/orders
+      - run: docker push linkaiq2019/orders
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
