--- a/.github/workflows/deploy-payments.yml
+++ b/.github/workflows/deploy-payments.yml
@@ -17,7 +17,7 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: cd payments && docker build -t cygnetops/payments .
-      - run: docker push cygnetops/payments
+      - run: docker push linkaiq2019/payments
       - uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
