another fix docker images name

--- a/.github/workflows/deploy-expiration.yml
+++ b/.github/workflows/deploy-expiration.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd expiration && docker build -t cygnetops/expiration .
+      - run: cd expiration && docker build -t linkaiq2019/expiration .
       - run: docker push linkaiq2019/expiration
       - uses: digitalocean/action-doctl@v2
         with:
