--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd auth && docker build -t cygnetops/auth .
+      - run: cd auth && docker build -t linkaiq2019/auth .
       - run: docker push linkaiq2019/auth
       - uses: digitalocean/action-doctl@v2
         with:
