--- a/.github/workflows/deploy-payments.yml
+++ b/.github/workflows/deploy-payments.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd payments && docker build -t cygnetops/payments .
+      - run: cd payments && docker build -t linkaiq2019/payments .
       - run: docker push linkaiq2019/payments
       - uses: digitalocean/action-doctl@v2
         with:
