--- a/.github/workflows/deploy-tickets.yml
+++ b/.github/workflows/deploy-tickets.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd tickets && docker build -t cygnetops/tickets .
+      - run: cd tickets && docker build -t linkaiq2019/tickets .
       - run: docker push linkaiq2019/tickets
       - uses: digitalocean/action-doctl@v2
         with:
