--- a/infra/k8s/orders-mongo-depl.yaml
+++ b/infra/k8s/orders-mongo-depl.yaml
@@ -18,6 +18,7 @@ spec:
           volumeMounts:
             - name: mongodb-storage
               mountPath: /data/db
+              subpath: orders
       volumes:
         - name: mongodb-storage
           persistentVolumeClaim:
