--- a/infra/k8s/orders-mongo-depl.yaml
+++ b/infra/k8s/orders-mongo-depl.yaml
@@ -16,11 +16,11 @@ spec:
         - name: orders-mongo
           image: mongo
           volumeMounts:
-            - name: mongodb-storage
+            - name: mongodb-storage-orders
               mountPath: /data/db
               subPath: orders
       volumes:
-        - name: mongodb-storage
+        - name: mongodb-storage-orders
           persistentVolumeClaim:
             claimName: mongodb-pv-claim
 ---
