--- a/infra/k8s/database-persistent-volume-claim.yaml
+++ b/infra/k8s/database-persistent-volume-claim.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mongodb-pv-claim
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 5Gi
