--- a/infra/k8s/database-persistent-volume-claim2.yaml
+++ b/infra/k8s/database-persistent-volume-claim2.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongodb-pv-claim
+  name: mongodb-pv-claim-small
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 2Gi
