--- a/infra/k8s/orders-mongo-depl.yaml
+++ b/infra/k8s/orders-mongo-depl.yaml
@@ -23,7 +23,7 @@ spec:
       volumes:
         - name: mongodb-storage-orders
           persistentVolumeClaim:
-            claimName: mongodb-pv-claim
+            claimName: mongodb-pv-claim-small
 ---
 apiVersion: v1
 kind: Service
