--- a/infra/k8s/orders-mongo-depl.yaml
+++ b/infra/k8s/orders-mongo-depl.yaml
@@ -23,7 +23,7 @@ spec:
       volumes:
         - name: mongodb-storage-orders
           persistentVolumeClaim:
-            claimName: mongodb-pv-claim-small
+            claimName: mongodb-pv-claim-orders
 ---
 apiVersion: v1
 kind: Service
@@ -37,3 +37,14 @@ spec:
       protocol: TCP
       port: 27017
       targetPort: 27017
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongodb-pv-claim-orders
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
