--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -15,6 +15,14 @@ spec:
       containers:
         - name: client
           image: linkaiq2019/ticketing-client
+          resources:
+            requests:
+              memory: "256Mi",
+              cpu: "50m"
+            limits:
+              memory: "512Mi",
+              cpu: "100m"
+
 ---
 apiVersion: v1
 kind: Service
