--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,17 @@
 FROM node:alpine
 
-WORKDIR /app
-COPY package.json .
-RUN npm install
-COPY . .
+# Create app directory
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
-CMD ["npm", "run", "dev"]
+# Installing dependencies
+COPY package*.json /usr/src/app/
+RUN npm install
+
+# Copying source files
+COPY . /usr/src/app
+
+# Building app
+RUN npm run build
+
+CMD ["npm", "run", "start"]
