--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "start": "next start",
     "build": "next build"
   },
   "keywords": [],
